--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,18 @@ version: "3.9"
 
 services:
   db:
-    image: postgres:13.3
-    restart: always
+    image: postgres:13.4
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: bagheera_dev
     ports:
       - "5432:5432"
+
+  api:
+    build:
+      context: .
+    ports:
+      - "4000:4000"
+    depends_on:
+      - db
